add artefacts and seminar notes

--- a/module4.html
+++ b/module4.html
@@ -45,6 +45,94 @@
                             roles and team organisation.</li>
                     </ul>
 
+					<hr class="major" />
+
+					<h2>Artefacts</h2>
+					<div class="table-wrapper">
+						<table class="alt">
+							<thead>
+								<tr>
+									<th>Unit</th>
+									<th>Requirements</th>
+									<th>Resource</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Units 1-3</td>
+									<td>Collaborative Discussion 1: Project Failures Study</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/11ChYgPPvS8sKITCYibIPO67e6HZuxYlD1TLstKjW0hc/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 3: Estimating, Planning and Risk</td>
+									<td>Data Structures Reflection</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1cfQ7i0ZSRuHl7sYBQBBvrXEKOyfqMCpP6l-YsMRilnM/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 3: Estimating, Planning and Risk</td>
+									<td>Data Structures Reflection</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1cfQ7i0ZSRuHl7sYBQBBvrXEKOyfqMCpP6l-YsMRilnM/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Units 5-8</td>
+									<td>Collaborative Discussion 2: Factors Affecting User Experience</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1xHdZ0iwtVjDtLlt0Qm1qQQW3hkEbXQ8Ys82fC9mgtVg/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 6: pytest and Test-Driven Development</td>
+									<td>Codio Activity - pytest</td>
+									<td><a target="_blank" href="https://github.com/eakoranteng/Pytest-Experiment" >Source Code</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 7: Software Development Life Cycles</td>
+									<td>Managing the emotional reactions of a customer</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1El1lK8JUXzwaXJsmMi_Nmih3zWcP2_MHByVf_myeRsc/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 9: Quality Management Strategy</td>
+									<td>Improving Code Quality</td>
+									<td><a target="_blank" href="https://github.com/eakoranteng/Pytest-Experiment/commit/54df59871e8d6d430f0a4c5caba79bba644a19a9" >Source Code</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 10: Software Quality Monitoring in Python</td>
+									<td>Using Linters to Achieve Python Code Quality</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1FsRdrQmCFCJnBV9tIe-MQkqkjdjTnpAoT0r6FduIP2U/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 10: Software Quality Monitoring in Python</td>
+									<td>Reflection on Software Quality</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1Pf91C8gs4KZXp3Vy9QNT4Q2yN2MB1wyd84yLsvVJcEg/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								
+							</tbody>
+						</table>
+					</div>
+
+					<h2>Seminars</h2>
+					<div class="table-wrapper">
+						<table class="alt">
+							<thead>
+								<tr>
+									<th>Title</th>
+									<th>Learning Outcomes</th>
+									<th>Notes</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Unit 2 Seminar: Requirements Gathering</td>
+									<td>Use the Gherkin language to create a Gherkin sequence that addresses ONE example.</td>
+									<td><a target="_blank" href="https://docs.google.com/presentation/d/1tu7r87P4dWg6SfAlKVxqBcQDGGr1UsXWEI3pgd4rk18/edit?usp=sharing" >Presentation notes</a></td>
+								</tr>
+								<tr>
+									<td>Unit 4 Seminar: Estimating Tools and Risk Assessment</td>
+									<td>Create a python program that implements one of the estimation methods.</td>
+									<td><a target="_blank" href="https://gist.github.com/eakoranteng/71d098911df272daa00ef91d8ff3ace3" >Source Code</a></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
                 </section>
 
                 <!-- Footer -->
