--- a/module4.html
+++ b/module4.html
@@ -133,6 +133,13 @@
 						</table>
 					</div>
 
+                    <hr class="major" />
+
+                    <h2>Reflection</h2>
+                    <p>The Software Engineering Project Management module comprehensively explored project management principles and their integration with software engineering. Every activity was a stepping stone in understanding the complexities and nuances of effectively managing software engineering projects.</p>
+                    <p>Notable activities, such as the group project and individual presentation, provided valuable insights. The group project highlighted the importance of clear communication, strategic division of tasks, and the need for depth in system design proposals. The individual presentation emphasised personal accountability, project communication, and balancing brevity and detail.</p>
+                    <p>Overall, the module contributed to a holistic understanding of project management by emphasising collaboration, personal responsibility, and continuous improvement in software engineering project management practices.</p>
+
                 </section>
 
                 <!-- Footer -->
