Update table titles for all modules

--- a/module1.html
+++ b/module1.html
@@ -53,8 +53,8 @@
 							<thead>
 								<tr>
 									<th>Title</th>
-									<th>Learning Outcomes</th>
-									<th>Notes</th>
+									<th>Detail</th>
+									<th>Resources</th>
 								</tr>
 							</thead>
 							<tbody>
