--- a/module2.html
+++ b/module2.html
@@ -51,8 +51,8 @@
 							<thead>
 								<tr>
 									<th>Unit</th>
-									<th>Requirements</th>
-									<th>Resource</th>
+									<th>Requirement</th>
+									<th>Resources</th>
 								</tr>
 							</thead>
 							<tbody>
