--- a/module4.html
+++ b/module4.html
@@ -53,8 +53,8 @@
 							<thead>
 								<tr>
 									<th>Unit</th>
-									<th>Requirements</th>
-									<th>Resource</th>
+									<th>Requirement</th>
+									<th>Resources</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -114,8 +114,8 @@
 							<thead>
 								<tr>
 									<th>Title</th>
-									<th>Learning Outcomes</th>
-									<th>Notes</th>
+									<th>Detail</th>
+									<th>Resources</th>
 								</tr>
 							</thead>
 							<tbody>
