update eportfolio sub-heading

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<div class="content">
 						<header>
 							<h1>Emmanuel Koranteng</h1>
-							<p>Explore my academic journey through MSc Computer Science in this e-Portfolio</p>
+							<p>e-Portfolio of my academic journey through an MSc Computer Science Programme</p>
 						</header>
 					</div>
 				</section>
