--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
 							<h3>Launching into Computer Science</h3>
 							<p>High-level overview of Computer Science theories and contemporary practices.</p>
 							<ul class="actions">
-								<li><a href="module1.html" class="button">More</a></li>
+								<li><a href="module1.html" class="button">Learn More</a></li>
 							</ul>
 						</article>
 						<article>
 							<h3>Object Oriented Programming</h3>
 							<p>Programming principles, practices and object-oriented programming paradigm.</p>
 							<ul class="actions">
-								<li><a href="module2.html" class="button">More</a></li>
+								<li><a href="module2.html" class="button">Learn More</a></li>
 							</ul>
 						</article>
 						<article>
 							<h3>Secure Software Development</h3>
 							<p>Concepts and application of secure software development and SDLC models.</p>
 							<ul class="actions">
-								<li><a href="module3.html" class="button">More</a></li>
+								<li><a href="module3.html" class="button">Learn More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -64,7 +64,7 @@
 							<p>Application of Project Management methodologies, tools and techniques in software
 								engineering.</p>
 							<ul class="actions">
-								<li><a href="module4.html" class="button">More</a></li>
+								<li><a href="module4.html" class="button">Learn More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -72,14 +72,14 @@
 							<p>Concepts of Network Security and an analysis of security threats, vulnerabilities in
 								computer networking systems.</p>
 							<ul class="actions">
-								<li><a href="#" class="button disabled">More</a></li>
+								<li><a href="#" class="button disabled">Not Available</a></li>
 							</ul>
 						</article>
 						<article>
 							<h3>Information Security Management</h3>
 							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
 							<ul class="actions">
-								<li><a href="#" class="button disabled">More</a></li>
+								<li><a href="#" class="button disabled">Not Available</a></li>
 							</ul>
 						</article>
 						<article>
@@ -87,7 +87,7 @@
 							<p>Research methodologies and a look at the legal and ethical issues in computing
 								professions.</p>
 							<ul class="actions">
-								<li><a href="#" class="button disabled">More</a></li>
+								<li><a href="#" class="button disabled">Not Available</a></li>
 							</ul>
 						</article>
 						<article>
@@ -95,7 +95,7 @@
 							<p>Dissertation of a research project on a selected topic of interest within Computer
 								Science.</p>
 							<ul class="actions">
-								<li><a href="#" class="button disabled">More</a></li>
+								<li><a href="#" class="button disabled">Not Available</a></li>
 							</ul>
 						</article>
 					</div>
