update links to network security module page

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 						</article>
 						<article>
 							<h3>Network Security</h3>
-							<p>Concepts of Network Security and an analysis of security threats, vulnerabilities in
+							<p>Concept of Network Security and an analysis of the security threats and vulnerabilities in
 								computer networking systems.</p>
 							<ul class="actions">
-								<li><a href="#" class="button disabled">Not Available</a></li>
+								<li><a href="module5.html" class="button">Learn More</a></li>
 							</ul>
 						</article>
 						<article>
@@ -131,6 +131,7 @@
 								<li><a href="module2.html">Object Oriented Programming</a></li>
 								<li><a href="module3.html">Secure Software Development</a></li>
 								<li><a href="module4.html">Software Engineering Project Management</a></li>
+                                <li><a href="module5.html">Network Security</a></li>
 							</ul>
 						</li>
 					</ul>
