--- a/module4.html
+++ b/module4.html
@@ -172,6 +172,7 @@
                                 <li><a href="module2.html">Object Oriented Programming</a></li>
                                 <li><a href="module3.html">Secure Software Development</a></li>
                                 <li><a href="module4.html">Software Engineering Project Management</a></li>
+                                <li><a href="module5.html">Network Security</a></li>
                             </ul>
                         </li>
                     </ul>
