--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>About - Emmanuel Koranteng Portfolio</title>
+	<title>About - Emmanuel Koranteng's e-Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
