--- a/module2.html
+++ b/module2.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Object Oriented Programming - Emmanuel Koranteng Portfolio</title>
+	<title>Object Oriented Programming - Emmanuel Koranteng's e-Portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
