--- a/module4.html
+++ b/module4.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-    <title>Software Engineering Project Management - Emmanuel Koranteng Portfolio</title>
+    <title>Software Engineering Project Management - Emmanuel Koranteng's e-Portfolio</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
