change summary for network security module

--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 						</article>
 						<article>
 							<h3>Network Security</h3>
-							<p>Concept of Network Security and an analysis of the security threats and vulnerabilities in
-								computer networking systems.</p>
+							<p>Understanding the impact of cyber security on network systems, with a focus on network vulnerability assessments.</p>
 							<ul class="actions">
 								<li><a href="module5.html" class="button">Learn More</a></li>
 							</ul>
