--- a/module5.html
+++ b/module5.html
@@ -26,7 +26,7 @@
                 <section>
                     <header class="main">
                         <h1>Network Security</h1>
-                        <p>Concept of Network Security and an analysis of the security threats and vulnerabilities in computer networking systems.</p>
+                        <p>Understanding the impact of cyber security on network systems, with a focus on network vulnerability assessments.</p>
                     </header>
 
                     <hr class="major" />
