add content for unit 1

--- a/module5.html
+++ b/module5.html
@@ -41,6 +41,27 @@
 
 					<hr class="major" />
 
+					<h2>Artefacts</h2>
+					<div class="table-wrapper">
+						<table class="alt">
+							<thead>
+								<tr>
+									<th>Unit</th>
+									<th>Requirement</th>
+									<th>Resources</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Units 1-3</td>
+									<td>Collaborative Discussion 1: Digitalisation - What are the security implications of the digital economy?</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/14xKHnqx2C7JRyC7HCM7BsByiZnh7D8eUx9KXkxVkIKM/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								
+							</tbody>
+						</table>
+					</div>
+
                 </section>
 
                 <!-- Footer -->
