--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
 							</ul>
 						</article>
 						<article>
-							<h3>Information Security Management</h3>
-							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
-							<ul class="actions">
-								<li><a href="#" class="button disabled">Not Available</a></li>
-							</ul>
-						</article>
-						<article>
 							<h3>Research Methods and Professional Practice</h3>
 							<p>Research methodologies and a look at the legal and ethical issues in computing
 								professions.</p>
+							<ul class="actions">
+								<li><a href="module6.html" class="button">Learn More</a></li>
+							</ul>
+						</article>
+						<article>
+							<h3>Information Security Management</h3>
+							<p>Key concepts and skills underpinning Information Security and Risk Management (ISM).</p>
 							<ul class="actions">
 								<li><a href="#" class="button disabled">Not Available</a></li>
 							</ul>
@@ -131,6 +131,7 @@
 								<li><a href="module3.html">Secure Software Development</a></li>
 								<li><a href="module4.html">Software Engineering Project Management</a></li>
                                 <li><a href="module5.html">Network Security</a></li>
+                                <li><a href="module6.html">Research Methods and Professional Practice</a></li>
 							</ul>
 						</li>
 					</ul>
