--- a/module1.html
+++ b/module1.html
@@ -143,6 +143,7 @@
 								<li><a href="module3.html">Secure Software Development</a></li>
 								<li><a href="module4.html">Software Engineering Project Management</a></li>
                                 <li><a href="module5.html">Network Security</a></li>
+                                <li><a href="module6.html">Research Methods and Professional Practice</a></li>
 							</ul>
 						</li>
 					</ul>
