--- a/module2.html
+++ b/module2.html
@@ -172,6 +172,7 @@
 								<li><a href="module4.html">Software Engineering Project Management</a></li>
                                 <li><a href="module5.html">Network Security</a></li>
                                 <li><a href="module6.html">Research Methods and Professional Practice</a></li>
+                                <li><a href="module7.html">Information Security Management</a></li>
 							</ul>
 						</li>
 					</ul>
