add artefacts to information security module page

--- a/module7.html
+++ b/module7.html
@@ -52,6 +52,11 @@
 								</tr>
 							</thead>
 							<tbody>
+								<tr>
+									<td>Units 1-2</td>
+									<td>Collaborative Discussion 1: The Risks of Digitalisation</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1pGC2mHw2vC5ib9Hcff0S88bW6VCdIQ7HMXSyGNdoqi8/edit?usp=sharing" >Document</a></td>
+                                </tr>
 							</tbody>
 						</table>
 					</div>
