add artefacts to RMPP module

--- a/module6.html
+++ b/module6.html
@@ -53,14 +53,39 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>Unit 1</td>
+									<td>Reflective Activity 1 – Ethics in Computing in the age of Generative AI</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/11AWdPDD7QMtfMOJFhehT0WTljb3VmHfAE6ZTlfsGZn8/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 2</td>
+									<td>Literature Review and Research Proposal Outlines</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1lXrzGGKQo4GToE3brO3Q4lW3xKzNipO4eNLJSALXXOA/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 3</td>
+									<td>Research Proposal Review</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1gytTLA73I4gvnQg6K1zfhnPAWcCZYLRM1UxEM9XDgTA/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
 									<td>Units 1-3</td>
 									<td>Collaborative Discussion 1: Codes of Ethics and Professional Conduct</td>
 									<td><a target="_blank" href="https://docs.google.com/document/d/1gytTLA73I4gvnQg6K1zfhnPAWcCZYLRM1UxEM9XDgTA/edit?usp=sharing" >Document</a></td>
                                 </tr>
 								<tr>
+									<td>Unit 4</td>
+									<td>Literature Review Outline</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1lXrzGGKQo4GToE3brO3Q4lW3xKzNipO4eNLJSALXXOA/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
 									<td>Unit 5</td>
 									<td>Reflective Activity 2: Case Study: Inappropriate Use of Surveys</td>
 									<td><a target="_blank" href="https://docs.google.com/document/d/1EZ1WV-8v_OPOD1sEUb9tN8U6NAO209MMvL1bR1o7zi4/edit?usp=sharing" >Document</a></td>
+                                </tr>
+								<tr>
+									<td>Unit 7</td>
+									<td>Collaborative Learning Discussion 2</td>
+									<td><a target="_blank" href="https://docs.google.com/document/d/1XB60jVbccjpi-iBlZBYNF_V97USO-35xLgXeM1OnQqE/edit?usp=sharing" >Document</a></td>
                                 </tr>
 							</tbody>
 						</table>
